kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app-name
        image: txconsole/hello-app:1.0
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred
